# mimic

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: deployment.md  environments.md  index.md  quickstart.md  teleoperation.md  training.md
docs/api/: index.md
docs/plans/: 2026-03-09-mimic-full-design.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Controls.tsx  EpisodeManager.tsx  TouchJoystick.tsx  VideoStream.tsx
frontend/src/hooks/: useGamepad.ts  useWebRTC.ts
scripts/: demo_prep.py
src/mimic/: __init__.py
src/mimic/cli/: app.py
src/mimic/config/: models.py
src/mimic/data/: __init__.py  dataset.py  formats.py  recorder.py  stats.py  video.py
src/mimic/deploy/: __init__.py  export.py  inference.py
src/mimic/envs/: __init__.py  base.py  registry.py
src/mimic/envs/assets/scenes/: tabletop_pick_place.xml  tabletop_push.xml  tabletop_stack.xml
src/mimic/envs/tasks/: __init__.py  pick_place.py  push.py  stack.py
src/mimic/hub/: client.py
src/mimic/teleop/: __init__.py  commands.py  loop.py  replay.py  server.py  video.py
src/mimic/teleop/controllers/: __init__.py  cartesian.py  joint.py
src/mimic/train/: __init__.py  dataloader.py  eval.py  trainer.py
src/mimic/train/policies/: __init__.py  act.py  base.py  diffusion.py
tests/: test_cli.py  test_controllers.py  test_data.py  test_deploy.py  test_envs.py  test_formats.py  test_hub.py  test_pick_place.py  test_tasks.py  test_teleop.py  test_train.py
